--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eventsource-parser": "^3.0.6",
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
+    "framer-motion": "^12.23.24",
     "lenis": "^1.3.14",
     "lucide-react": "^0.546.0",
     "prismjs": "^1.30.0",
@@ -38,6 +39,7 @@
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.21",
+    "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
