--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.4",
+    "react-type-animation": "^3.2.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
