--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.1.16",
+    "@tanstack/react-query": "^5.90.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
@@ -20,9 +21,11 @@
     "lucide-react": "^0.546.0",
     "prismjs": "^1.30.0",
     "react": "^18.3.1",
+    "react-activity-calendar": "^3.0.2",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.4",
+    "react-tooltip": "^5.30.0",
     "react-type-animation": "^3.2.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
