--- a/server/.env.example
+++ b/server/.env.example
@@ -2,3 +2,4 @@
 VITE_GEMINI_API_KEY=your_gemini_api_key_here
 RATE_LIMIT_MAX_REQUESTS=8
 RATE_LIMIT_WINDOW_MS=60000
+GITHUB_TOKEN = your_github_token_here
