--- a/server/.env.example
+++ b/server/.env.example
@@ -3,3 +3,5 @@ VITE_GEMINI_API_KEY=your_gemini_api_key_here
 RATE_LIMIT_MAX_REQUESTS=8
 RATE_LIMIT_WINDOW_MS=60000
 GITHUB_TOKEN = your_github_token_here
+CORS_ORIGIN= #frontend_url 
+isTrustProxy= #true/false
